fixed css to align

--- a/src/style.css
+++ b/src/style.css
@@ -11,12 +11,19 @@
 
 html {
   font-family: var(--main-font-family);
-  text-align: center;
-  margin: 30px auto;
+  margin: 10px auto;
   background-image: url(../images/background\ transparente.png);
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  
+
 }
 
 table,
@@ -24,7 +31,7 @@ td,
 th {
   border: var(--table-border);
   border-collapse: collapse;
-  text-align: center;
+
   justify-content: center;
   padding: 10px;
 }
@@ -57,6 +64,7 @@ footer,
   display: flex;
   justify-content: space-evenly;
   padding: 15px;
+  width: 100%;
 }
 #top-nav a:hover,
 footer a:hover {
@@ -114,8 +122,6 @@ footer a:hover {
   font-size: 35px;
 }
 .main-about p {
-  justify-content: center;
-  text-align: center;
   line-height: 2;
   margin: 35px 35px;
   color: var(--main-color);
@@ -131,6 +137,7 @@ footer a:hover {
   width: 600px;
   margin-left: 10rem;
   background: var(--secondary-color);
+  padding: 20px;
 }
 
 .order-button,
